# ToDoListParser

./: Cargo.toml  Makefile  Readme.md  Readme.me  test.txt
src/: grammar.pest  lib.rs  main.rs
tests/: grammar_tests.rs
