[package]
name = "todo_list_parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A lightweight command-line tool for parsing, organizing, and sorting task lists from plain text files with priority levels, status tracking, and date-based organization"

[dependencies]
anyhow = "1.0.100"
pest = "2.8.3"
pest_derive = "2.8.3"
clap = { version = "4.5.51", features = ["derive"] }
thiserror = "1.0"